# CMakeTutorial

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  hello.cpp
